--- a/src/app/main/components/template/template.component.html
+++ b/src/app/main/components/template/template.component.html
@@ -30,7 +30,7 @@
 <!--          <i class="fas fa-align-left"></i>-->
 <!--          <span>Toggle Sidebar</span>-->
 <!--        </button>-->
-        <app-object></app-object>
+        <router-outlet></router-outlet>
 
       </div>
     </nav>
