--- a/src/app/main/components/object/object.component.html
+++ b/src/app/main/components/object/object.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <div id="renderHere"></div>
+      <div #rendererContainer></div>
     </div>
   </div>
 </div>
