"change ui of the lists"

--- a/src/app/main/components/template/template.component.html
+++ b/src/app/main/components/template/template.component.html
@@ -23,17 +23,22 @@
 
   <!-- Page Content -->
   <div id="content">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
+        <div class="row ">
+          <div class="col-md-12 p-0 m-0">
+
+          <router-outlet></router-outlet>
+
+          </div>
+        </div>
 
 <!--        <button type="button" id="sidebarCollapse" class="btn btn-info">-->
 <!--          <i class="fas fa-align-left"></i>-->
 <!--          <span>Toggle Sidebar</span>-->
 <!--        </button>-->
-        <router-outlet></router-outlet>
+
 
       </div>
-    </nav>
   </div>
 
 </div>
